fixed popup sizing on mobile screen size

--- a/client/src/components/CreateMemory/popup.css
+++ b/client/src/components/CreateMemory/popup.css
@@ -1,5 +1,5 @@
 .popup-content {
     width: auto;
     border-radius: 30px;
-    min-width: 430px;
+    min-width: 0px;
 }
